<resources>
    <string name="app_name">MemoryBlitz</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification">Notifications</string>
    <string name="yes">Yes</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="choose_graphic_pack">Choose Graphic Pack</string>
    <string name="go_ahead_and_play">Go ahead and start</string>
    <string name="progress_game">Progress</string>
    <string name="classic_game">Classic</string>
    <string name="card_matrix">Card matrix</string>
    <string name="number_of_cards">Cards to remember per level</string>
    <string name="time_to_remember">Time to remember</string>
    <string name="card">cards</string>
    <string name="number_of_cards_per_series">Number of cards per series</string>
    <string name="christmas_GP">Christmas</string>
    <string name="family_GP">Family</string>
    <string name="scenery_GP">Scenery</string>
    <string name="space_GP">Space</string>
    <string name="summer_GP">Summer</string>
    <string name="toys_GP">Toys</string>
    <string name="western_GP">Western</string>
    <string name="progressive_desc">memorize cards order and find the right serie</string>
    <string name="classic_desc">choose your difficulty and train</string>
    <string name="points">points</string>
    <string name="memorize">Memorize</string>
    <string name="lets_go">Lets Go</string>
    <string name="right">Great</string>
    <string name="end">End</string>
    <string name="retry">Retry</string>
    <string name="resume">Resume</string>
    <string name="pause">Pause</string>
    <string name="about_thanks">Thanks for downloading and playing.</string>
    <string name="get_ready">Get Ready</string>

</resources>
