<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.example.stanislavcavajda.memoryblitz.R" />

        <import type="me.tatarka.bindingcollectionadapter2.LayoutManagers" />

        <import type="android.support.v7.widget.LinearLayoutManager" />

        <variable
            name="viewModel"
            type="com.example.stanislavcavajda.memoryblitz.ViewModel.CardListViewModel" />

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/screen_background"
        tools:context="com.example.stanislavcavajda.memoryblitz.ProgressiveGameSettingsActivity"
        android:id="@+id/main_layout_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/choose_graphic_pack"
            android:textColor="@color/text_color_menu"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

            <com.chauthai.overscroll.RecyclerViewBouncy
                android:id="@+id/endless_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:itemBinding="@{viewModel.itemBinding}"
                app:items="@{viewModel.list}"
                app:layoutManager="@{LayoutManagers.linear(LinearLayoutManager.HORIZONTAL,false)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:gapLimit="50">
            </com.chauthai.overscroll.RecyclerViewBouncy>


        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/number_of_cards_per_series"
            android:textColor="#E5E5E5"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/endless_recycler_view" />


        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@color/gradient_start"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/go_ahead_and_play"
            android:textColor="#E5E5E5"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.aigestudio.wheelpicker.WheelPicker
            android:id="@+id/cards_number_picker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            app:wheel_atmospheric="true"
            app:wheel_indicator="true"
            app:wheel_indicator_color="#919191"
            app:wheel_indicator_size="1dp"
            app:wheel_visible_item_count="5"
            app:wheel_item_text_color="#4E4E4E">
        </com.aigestudio.wheelpicker.WheelPicker>


    </android.support.constraint.ConstraintLayout>

</layout>

